<resources>
    <string name="app_name">Radix</string>
    <string name="radix_logo">Radix Logo</string>

    <string name="action_continue">Continue</string>

    <string name="welcome_title">Welcome</string>
    <string name="welcome_paragraph_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="welcome_paragraph_2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="terms_of_service_title">Terms of Service</string>
    <string name="terms_of_service_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus interdum dolor eu congue.</string>
    <string name="terms_of_service">A purely peer-to-peer version of electronic cash would allow online payments to be sent directly from one party to another without going through a financial institution. Digital signatures provide part of the solution, but the main benefits are lost if a trusted third party is still required to prevent double-spending. We propose a solution to the double-spending problem using a peer-to-peer network.\n\nThe network timestamps transactions by hashing them into an ongoing chain of hash-based proof-of-work, forming a record that cannot be changed without redoing the proof-of-work. The longest chain not only serves as proof of the sequence of events witnessed, but proof that it came from the largest pool of CPU power. As long as a majority of CPU power is controlled by nodes that are not cooperating to attack the network, they will generate the longest chain and outpace attackers. The network itself requires minimal structure. Messages are broadcast on a best effort basis, and nodes can leave and rejoin the network at will, accepting the longest proof-of-work chain as proof of what happened while they were gone.\n\n1. Introduction\n\nCommerce on the Internet has come to rely almost exclusively on financial institutions serving as trusted third parties to process electronic payments. While the system works well enough for most transactions, it still suffers from the inherent weaknesses of the trust based model. Completely non-reversible transactions are not really possible, since financial institutions cannot avoid mediating disputes. The cost of mediation increases transaction costs, limiting the minimum practical transaction size and cutting off the possibility for small casual transactions, and there is a broader cost in the loss of ability to make non-reversible payments for non- reversible services. With the possibility of reversal, the need for trust spreads. Merchants must be wary of their customers, hassling them for more information than they would otherwise need. A certain percentage of fraud is accepted as unavoidable. These costs and payment uncertainties can be avoided in person by using physical currency, but no mechanism exists to make payments over a communications channel without a trusted party.\n\nWhat is needed is an electronic payment system based on cryptographic proof instead of trust, allowing any two willing parties to transact directly with each other without the need for a trusted third party. Transactions that are computationally impractical to reverse would protect sellers from fraud, and routine escrow mechanisms could easily be implemented to protect buyers. In this paper, we propose a solution to the double-spending problem using a peer-to-peer distributed timestamp server to generate computational proof of the chronological order of transactions. The system is secure as long as honest nodes collectively control more CPU power than any cooperating group of attacker nodes.</string>
    <string name="terms_of_service_confirmation">I have read and agree to the terms of service</string>

    <string name="credentials_title">Credentials</string>
    <string name="credentials_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="credentials_hint_password">Password</string>
    <string name="credentials_hint_email">E-mail</string>
    <string name="credentials_email_validation_error">Not a valid email address</string>

    <string name="personal_information_title">Personal Information</string>
    <string name="personal_information_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="personal_information_hint_first_name">First name</string>
    <string name="personal_information_hint_last_name">Last name</string>
    <string name="personal_information_hint_phone_number">Phone number</string>

    <string name="pin_title">Create PIN</string>
    <string name="pin_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="pin_hint">PIN</string>

    <string name="confirm_pin_title">Confirm PIN</string>
    <string name="confirm_pin_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="confirm_pin_hint">PIN</string>
    <string name="confirm_pin_error">Not matching the previous pin</string>

    <string name="creating_account_title">Creating account</string>
    <string name="creating_account_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_greeting">Welcome %1$s %2$s</string>
    <string name="dashboard_contact_details">E-mail address: %1$s\nPhone number: %2$s</string>
    <string name="dashboard_menu_sign_out">Sign Out</string>
</resources>
